test_programs/compile_failure/cannot_deduce_numeric_generic/src/main.nr
fn foo<let N: u32>() -> u32 {
    N
}

fn main() {
    let _ = foo();
}

